<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="bigButton_search">Поиск</string>
    <string name="bigButton_media">Медиатека</string>
    <string name="bigButton_settings">Настройки</string>
    <string name="settActive_theme_switch">Темная тема</string>
    <string name="settActive_share">Поделиться приложением</string>
    <string name="settActive_support_ticket">Написать в поддержку</string>
    <string name="settActive_user_conditions">Пользовательское соглашение</string>
    <string name="settActiv_backButton_descr">Вернуться на главный экран</string>


    <string name="YP_link_array">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="YP_student_email">dimoonoomid@yandex.ru</string>
    <string name="YP_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="YP_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="YP_user_cond_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clearSearchText">Очистить строку поиска</string>
    <string name="track_details">Детали трека</string>
    <string name="track_unit_image">Обложка трека</string>
    <string name="artist_dot_time">" • "</string>
    <string name="track_name_placeholder">Трек</string>
    <string name="track_artist_placeholder">Исполнитель</string>
    <string name="track_time_placeholder">0:00</string>
    <string name="searchrefreshbutton">Обновить</string>
    <string name="search_nowifi_wrong_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_noresult_message">Ничего не нашлось</string>
    <string name="search_clear_history_button">Очистить историю</string>
    <string name="search_u_lookedfor_textview">Вы искали</string>
    <string name="smth_wrong_image_descr">Smth_wrong_image</string>
    <string name="trackplay_title_country">Страна</string>
    <string name="trackplay_title_genre">Жанр</string>
    <string name="trackplay_title_year">Год</string>
    <string name="trackplay_title_album">Альбом</string>
    <string name="trackplay_title_time">Длительность</string>
    <string name="trackplay_start_time">0:00</string>
    <string name="playboutton_descr">Кнопка Воспроизвести</string>
    <string name="likebutton_descr">Кнопка Лайк</string>
    <string name="addbutton_descr">Кнопка добавить</string>
    <string name="trackart_descr">Обложка трека</string>
    <string name="mediahead">Медиатека</string>
    <string name="media_empty_favorites">Ваша медиатека пуста</string>
    <string name="media_newplaylist">Новый плейлист</string>
    <string name="media_emtyplaylist">Вы не создали\n ни одного плейлиста</string>
    <string name="media_tab_favorites">Избранные треки</string>
    <string name="media_tab_playlists">Плейлисты</string>
    <string name="crpl_new_playlist">Новый плейлист</string>
    <string name="crpl_create_button_text">Создать</string>
    <string name="crpl_playlistname_hint">Название*</string>
    <string name="crpl_playlistdescr_hint">Описание</string>
    <string name="playlist_unit_art_descr">Обложка плейлиста</string>
    <string name="confirmdialoge_title">Завершить создание плейлиста?</string>
    <string name="confirmdialoge_message">Все несохраненные данные будут потеряны</string>
    <string name="confirmdialoge_cancel">Отмена</string>
    <string name="confirmdialoge_end">Завершить</string>
    <string name="player_bottomsheet_head">Добавить в плейлист</string>
    <string name="player_toast_added">"Добавлено в плейлист "</string>
    <string name="player_toast_already_added">"Трек уже добавлен в плейлист "</string>
    <string name="crpl_toast_plcreated">Плейлист создан</string>
    <string name="crpl_toast_plart_notselected">Арт не выбран</string>
    <string name="plinfo_art_descr">Обложка плейлиста</string>
    <string name="plinfo_name_placeholder">Название плейлиста</string>
    <string name="plinfo_descr_placeholder">Описание плейлиста</string>
    <string name="pl_info_empty_tracklist">В плейлист не добавлены треки</string>
    <string name="plinfo_menu_share">Поделиться</string>
    <string name="plinfo_menu_changepl">Редактировать информацию</string>
    <string name="plinfo_menu_deletepl">Удалить плейлист</string>
    <string name="plinfo_delete_track_confrimdialog_title">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="plinfo_delete_pl_confrimdialog_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="exit_dialog">Хотите выйти из приложения?</string>
    <string name="edpl_edit">Редактировать</string>
    <string name="edpl_save_button_text">Сохранить</string>
    <string name="edpl_toast_pledited">Плейлист изменен</string>
    <string name="n_track">%1$d трек</string>
    <string name="n_trackov">%1$d треков</string>
    <string name="n_tracka">%1$d трека</string>
    <string name="n_minut">%1$d минут</string>
    <string name="n_minuta">%1$d минута</string>
    <string name="n_minuti">%1$d минуты</string>

</resources>