<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SearchTextBar"
        style="@style/HeadText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:text="@string/bigButton_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchTextBar">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/YP_lightGray"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:drawableStart="@drawable/searchlens_14"
            android:drawablePadding="8dp"

            android:fontFamily="@font/ys_disp"
            android:hint="@string/bigButton_search"

            android:padding="8dp"
            android:textColorHint="@color/YP_gray"
            android:textFontWeight="400"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/YP_lightGray"
        android:contentDescription="@string/tapBarBorder"
        app:layout_constraintBottom_toTopOf="@+id/tapBarSettings" />

    <LinearLayout
        android:id="@+id/tapBarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            style="@style/TapButtonStyle"
            android:text="@string/bigButton_search"
            app:icon="@drawable/searchlens" />

        <Button
            style="@style/TapButtonStyle"
            android:text="@string/bigButton_media"
            app:icon="@drawable/mediaicon" />

        <Button
            style="@style/TapButtonStyle"
            android:text="@string/bigButton_settings"
            app:icon="@drawable/settinggear" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>